--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "express-flash": "0.0.2",
     "express-session": "^1.17.0",
     "neo4j-driver": "^4.0.1",
-    "pug": "^2.0.4",
-    "pug-async": "^2.0.7"
+    "pug": "^2.0.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
